feat : ajout de la methode pour  suppression d'une periode et sa route
